--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,7 +1,7 @@
 [
   {
     "id": 1,
-    "title": "Сайт школы онлайн образования",
+    "title": "Сайт школы  образования",
     "skills": "Html, Css, JavaScript",
     "photo": "slider-1.jpg",
     "link": "//google.com",
@@ -9,7 +9,7 @@
   },
   {
     "id": 2,
-    "title": "Сайт школы онлайн образования",
+    "title": "Сайт школы  образования",
     "skills": "Html, Css, JavaScript",
     "photo": "slider-2.jpg",
     "link": "//yandex.ru",
@@ -17,7 +17,7 @@
   },
   {
     "id": 3,
-    "title": "Сайт школы онлайн образования",
+    "title": "Сайт школы  образования",
     "skills": "Html, Css, JavaScript",
     "photo": "slider-3.jpg",
     "link": "//rambler.ru",
@@ -25,7 +25,7 @@
   },
   {
     "id": 4,
-    "title": "Сайт школы онлайн образования",
+    "title": "Сайт школы  образования",
     "skills": "Html, Css, JavaScript",
     "photo": "slider-4.jpg",
     "link": "//rambler.ru",
