правки адаптива. параллах

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -10,7 +10,7 @@
   {
     "id": 2,
     "title": "Сайт школы  образования",
-    "skills": "Html, Css, JavaScript",
+    "skills": "Html, Css3, JavaScript",
     "photo": "slider-2.jpg",
     "link": "//yandex.ru",
     "desc": "Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!"
