--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "@babel/polyfill": "^7.8.3",
     "axios": "^0.19.2",
     "jquery": "^3.4.1",
     "normalize.css": "^8.0.1",
@@ -60,6 +61,7 @@
     "simple-vue-validator": "^0.16.0",
     "vue": "^2.6.7",
     "vue-flickity": "^1.2.1",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vuex": "^3.1.2"
   }
 }
