--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   ],
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
+    "@johmun/vue-tags-input": "^2.1.0",
     "axios": "^0.19.2",
     "jquery": "^3.4.1",
     "normalize.css": "^8.0.1",
